# cppdialogue

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/PipelineBase/: Consumable.h  MutexQueue.h  Producible.h  Runnable.h
include/PipelineCore/: Consumable.h  Consumer.h  Pipeline.h  PipelineBuilder.h  Processor.h  Producer.h  Producible.h  Runnable.h  SampleData.h
include/PipelineExample/: LowerCaseProcessor.h  StringConsumer.h  TextFileProducer.h
src/: main.cpp
src/PipelineExample/: LowerCaseProcessor.cpp  StringConsumer.cpp  TextFileProducer.cpp
src/PipelineExample/FilePrinter/: LowerCaseProcessor.cpp  StringConsumer.cpp  TextFileProducer.cpp
